css/base-modern homepage: Tweak to prevent enter button off-center
The preceding elements were not styled wide enough and on
large screen the left spacer for the enter button ended up
on the line above, resulting in a non-centered enter button.

--- a/src/css/base-modern/8000-homepage.css
+++ b/src/css/base-modern/8000-homepage.css
@@ -62,7 +62,7 @@
         }
   
         & .Subliner {
-          flex: 1 1 89%;
+          flex: 1 1 89.5%;
           width: auto;
           margin-bottom: 0;
         }
